--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -9,3 +9,11 @@
 // compiled file, but it's generally better to create a new file per style scope.
 
 @import "**/*"
+
+*
+  box-sizing: border-box
+
+body
+  background: image-url("background.jpg")
+  color: #fff
+  font-family: Arial, Verdana, sans-serif
