--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,8 +7,8 @@
       180
     </div>
     <div class="actions">
-      <a class="start">Start</a>
-      <a class="reset">Reset</a>
+      <a class="start action">Start</a>
+      <a class="reset action">Reset</a>
     </div>
   </div>
 </section>
