Add hotkey support

--- a/app/assets/stylesheets/home.css.sass
+++ b/app/assets/stylesheets/home.css.sass
@@ -49,6 +49,7 @@
           background: rgba(0, 0, 0, 0.8)
           border: 3px solid #fff
 
-        &:active
+        &:active,
+        &.active
           background: #fff
           color: #000
