--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <section id="timers">
-  <div id="attack-helicopter-timer" class="timer">
+  <div id="attack-helicopter-timer" class="timer" data-hotkey="72">
     <div class="label">
       Attack helicopter
     </div>
