Play a sound once a timer runs out

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,8 @@
 <section id="timers">
   <div id="attack-helicopter-timer" class="timer" data-hotkey="72">
+    <audio class="audio">
+      <source src="<%= asset_path "alarm.mp3" %>" type="audio/mpeg">
+    </audio>
     <div class="label">
       Attack helicopter
     </div>
