--- a/app/assets/stylesheets/home.css.sass
+++ b/app/assets/stylesheets/home.css.sass
@@ -53,3 +53,9 @@
         &.active
           background: #fff
           color: #000
+
+      .start
+
+        .hotkey
+          margin-left: 5px
+          color: rgba(255, 255, 255, 0.2)
