--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,7 @@
       180
     </div>
     <div class="actions">
-      <a class="start action">Start</a>
+      <a class="start action">Start <span class="hotkey">H</span></a>
       <a class="reset action">Reset</a>
     </div>
   </div>
