--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,8 +6,8 @@
     <div class="label">
       Attack helicopter
     </div>
-    <div class="value" data-default="180">
-      180
+    <div class="value" data-remaining="180" data-default="180">
+      03:00
     </div>
     <div class="actions">
       <a class="start action">Start <span class="hotkey">H</span></a>
