Highlight expired timers briefly

--- a/app/assets/stylesheets/home.css.sass
+++ b/app/assets/stylesheets/home.css.sass
@@ -13,7 +13,13 @@
     font-weight: bold
     font-size: 12px
     background: rgba(0, 0, 0, 0.4)
+    border: 3px solid transparent
+    border-radius: 3px
     padding: 20px
+    transition: border-color 1s
+
+    &.highlight
+      border: 3px solid #fff
 
   #attack-helicopter-timer
 
