--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,12 @@
   <title>Battlefield Timer</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <%= javascript_include_tag "http://js.pusher.com/2.1/pusher.min.js" %>
   <%= csrf_meta_tags %>
+
+  <script>
+    PUSHER_KEY = '<%= Pusher.key %>'
+  </script>
 </head>
 <body>
 
