Add instructions to share timers

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -16,4 +16,11 @@
 body
   background: image-url("background.jpg")
   color: #fff
+  font-size: 12px
   font-family: Arial, Verdana, sans-serif
+
+.instructions
+  padding: 10px
+  border-radius: 3px
+  background: rgba(0, 0, 0, 0.5)
+  font-weight: bold
