--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,10 @@
 </head>
 <body>
 
+  <p class="instructions">
+    Synchronize your respawn timers across your squad by sharing the link in your address bar.
+  </p>
+
 <%= yield %>
 
 </body>
