Adjust for release

--- a/app/assets/stylesheets/home.css.sass
+++ b/app/assets/stylesheets/home.css.sass
@@ -6,6 +6,26 @@
 
 #timers
 
+  #attack-jet
+
+    .label
+      background-position: 0px 0px
+
+  #attack-helicopter
+    
+    .label
+      background-position: -624px 0px
+
+  #scout-helicopter
+    
+    .label
+      background-position: -832px 0px
+
+  #stealth-jet
+    
+    .label
+      background-position: -416px -52px
+
   .timer
     +clearfix
     width: 100%
@@ -21,14 +41,13 @@
     &.highlight
       border: 3px solid #fff
 
-  #attack-helicopter-timer
-
     .label
       float: left
-      width: 158px
+      width: 208px
       height: 52px
       text-indent: -1000px
-      background: image-url("attack-helicopter-white.png")
+      background: image-url("vehicles.png")
+      background-size: 1456px 364px
       margin-right: 50px
 
     .value
